# x-kafka-manager

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  main.qml
src/core/: CMakeLists.txt  context.cpp  context.h  kafka_client.cpp  kafka_client.h  kafka_monitor.cpp  kafka_monitor.h
tests/: CMakeLists.txt  test_case_1.cpp  test_case_2.cpp
